--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Drag Click Disambiguation</title>
   </head>
   <body>
-    <div id="container"></div>
+    <nav class="nav">
+      <img class="logo" src="img/logo.png" />
+    </nav>
+    <div id="container" class="container"></div>
     <script src="js/bundle/bundle.js"></script>
   </body>
 </html>
